- Fix collapsing issue with homepage links - Add style to term titles when in a list

--- a/src/components/App/app.module.css
+++ b/src/components/App/app.module.css
@@ -39,6 +39,6 @@
 
 @media (min-width: 769px) {
   .introLinks {
-    grid-template-columns: 1fr 1fr 4fr;
+    grid-template-columns: 160px 160px 1fr;
   }
 }
