--- a/src/layouts/GlossaryTerms/termsList.module.css
+++ b/src/layouts/GlossaryTerms/termsList.module.css
@@ -1,2 +1,3 @@
-.default {
+.termTitle {
+    color: #337AB7;
 }
